# scm

./: .gitignore  CMakeLists.txt  Makefile  README.md  sample_config.yaml  ssc.code-workspace
src/: connection_menu.hpp  main.cpp  menu_item.hpp  string_helpers.hpp
src/modules/: errors.hpp  menu_item.hpp  menu_items.hpp
test/: sample_config.json  sample_config.yaml
